--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -4,18 +4,31 @@
   <title>My Simple HTML Page</title>
 </head>
 <body>
-  <h1>Welcome to My Page</h1>
-  <h2>About This Page</h2>
-  <h3>Purpose</h3>
-
-  <p>This is the first paragraph on my HTML page.</p>
-  <p>Here is the second paragraph with more info.</p>
-  <p>This is the third paragraph, just adding more text.</p>
-  <p>And this is the fourth paragraph, almost done!</p>
-
-  <a href="https://www.alxafrica.com/" target="_blank">
-    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
-  </a>
-  <a href="tweets.html">tweets</a>
+  <header>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweets</a></li>
+    </ul>
+  </header>
+  <main>
+    <article>
+      <h1>Welcome to My Page</h1>
+      <h2>About This Page</h2>
+      <h3>Purpose</h3>
+      <p>This is the first paragraph on my HTML page.</p>
+      <p>Here is the second paragraph with more info.</p>
+      <p>This is the third paragraph, just adding more text.</p>
+      <p>And this is the fourth paragraph, almost done!</p>
+      <a href="https://www.alxafrica.com/" target="_blank">
+        <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
+      </a>
+    </article>
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+  </main>
+  <footer>
+    <p>Made by YOUR NAME - <a href="https://yourlink.com" target="_blank">here</a></p>
+  </footer>
 </body>
 </html>
