--- a/css_basic/tweets.html
+++ b/css_basic/tweets.html
@@ -18,12 +18,12 @@
       <blockquote class="twitter-tweet"><p lang="en" dir="ltr">What Happened in the Oval Office Today Will Rewrite Everything You Know About DOGE.<br><br>The media thinks they covered Elon Musk&#39;s farewell. They have no idea what they actually witnessed.<br><br>Trump exposed a presidential scandal that reveals who&#39;s actually been governing America.<br><br>A… <a href="https://t.co/K5TdA6TAp3">pic.twitter.com/K5TdA6TAp3</a></p>&mdash; Karl Mehta (@karlmehta) <a href="https://twitter.com/karlmehta/status/1928802402158915828?ref_src=twsrc%5Etfw">May 31, 2025</a></blockquote> 
       <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </article>
-    <aside>
+    <aside>https://yourlink.com/
       <p>placeholder to add comment thread later</p>
     </aside>
   </main>
   <footer>
-    <p>Made by YOUR NAME - <a href="https://yourlink.com" target="_blank">here</a></p>
+    <p>Made by yeabtsega - <a href="https://yourlink.com" target="_blank">here</a></p>
   </footer>
 </body>
 </html>
