--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -4,8 +4,10 @@
   <title>My Simple HTML Page</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="base.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body>
+<body class="works_on_smartphone">
   <header>
     <ul>
       <li><a href="index.html">Home</a></li>
@@ -63,7 +65,7 @@
     </aside>
   </main>
   <footer>
-    <p>Made by YOUR NAME - <a href="https://yourlink.com" target="_blank">here</a></p>
+    <p>Made by YEABTSEGA - <a href="https://yourlink.com" target="_blank">here</a></p>
   </footer>
 </body>
 </html>
