--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -18,7 +18,7 @@
     <article>
       <h1>Welcome to My Page</h1>
       <h2>About This Page</h2>
-      <h3>Purpose</h3>
+      <h3>Purpose</h3>1
       <p>This is the first paragraph on my HTML page.</p>
       <p>Here is the second paragraph with more info.</p>
       <p>This is the third paragraph, just adding more text.</p>
@@ -65,6 +65,10 @@
     </aside>
   </main>
   <footer>
+    <div class="contact-info">
+      &phone; <p> 0941126061</p>
+    </div >
+    
     <p>Made by YEABTSEGA - <a href="https://yourlink.com" target="_blank">here</a></p>
   </footer>
 </body>
