--- a/css_basic/tweets.html
+++ b/css_basic/tweets.html
@@ -5,8 +5,10 @@
   <title>My Basic Page</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="base.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body>
+<body class="works_on_smartphone"> 
   <header>
     <ul>
       <li><a href="index.html">Home</a></li>
