--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -3,197 +3,212 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>get schooled</title>
+    <script src="https://kit.fontawesome.com/4a2b055604.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
+    <title>Document</title>
 </head>
 <body>
     <header>
-        <div class="logo"><a href=""><img src="" alt="">smileSchool</a></div>
-        <div class="nav">
-            <a href="">courses</a>
-            <a href="">pricing</a>
-            <a href="">login</a>
-        </div>
+        <nav>
+            <a href=""><img src="logo.png" alt="logo"></a>
+          
+            <ul>
+                <li><a href="#">COURSE</a></li>
+                <li><a href="#">PRICING</a></li>
+                <li><a href="#">LOGIN</a></li>
+            </ul>
+        </nav>
+        
     </header>
     <main>
-        <section class="banner">
-            <div class="hero-content">
-                <h1>Get schooled</h1>
-                <p>smiles</p>
-                <p>grin</p>
-                <p>laugh</p>
-                <button>register free</button>
+        <section>
+            <div class="hero">
+                <div class="hero-words">
+                    <h1>Get schooled</h1>
+                    <span>SMILES</span>
+                    <span>GRIN</span>
+                    <span>LAUGH</span>
+                </div>
+                <button> REGISTER FOR FREE</button>
             </div>
-            <div class="pros-h">
-                <h3>learn from pros</h3>
-                <div class="pros">
+            <div class="lfp">
+                <h2><span>Learn</span> from the pros</h2>
+                <div class="pros-container">
                     <div class="pro1">
-                        <img src="pro1.png" alt="">
-                        <h3>phillip Massey</h3>
-                        <p>"smile of the year" 2018-2019</p>
+                        <img src= "pro1.png" alt="pros">
+                        <h3>Phillip Massey</h3>
+                        <p>« Smile of the year » 2018 - 2019</p>
                     </div>
                     <div class="pro2">
-                        <img src="pro2.png" alt="">
-                        <h3>Nannie lawrence</h3>
-                        <p>Best"little smile" 2017</p>
+                        <img src="pro2.png" alt="pros">
+                        <h3>Nannie Lawrence</h3>
+                        <p>Best « little smile » 2017</p>
                     </div>
                     <div class="pro3">
-                        <img src="pro3.png" alt="">
-                        <h3>bruce walters</h3>
-                        <p>best"friend smile" live performance 2019</p>
+                        <img src="pro3.png" alt="pros">
+                        <h3>Bruce Walters</h3>
+                        <p>Best « Friend Smile » live performance 2019</p>
                     </div>
                     <div class="pro4">
-                        <img src="pro4.png" alt="">
-                        <h3>henry hugh</h3>
-                        <p>"24th smile" winner 2016-2919</p>
+                        <img src="pro4.png" alt="pros">
+                        <h3>Henry Hughes</h3>
+                        <p>« 24h smiles » winner 2016 - 2019</p>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="quote">
+        <!-- <section>
             <div>
-                <img src="quote.png" alt="">
-                <div>
-                    <h4>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</h4>
-                    <p>Person Name</p>
-                    <p>weather presenter</p>
-                </div>
+                <img src="./images/Bitmap.png" alt="image">
+            </div>
+            <div>
+                <blockquote>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</blockquote>
+                <h3>NAME</h3>
+                <P>weather presenter</P>
             </div>
         </section>
-        <section class="videos">
-            <div> <h2>Most popular tutorials</h2></div>
+        <section>
+            <h2>Most popular tutorials</h2>
             <div>
-                <div class="tuto_1">
-                    <img src="diagonal_smile.png" alt="">
-                    <h3>Diagonal smile</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde sit perferendis totam culpa nihil minus voluptates! Id, necessitatibus provident quam unde sint delectus, eveniet doloremque aperiam recusandae neque accusamus ducimus.</p>
-                    <div>
-                        <img src="pro1.png" alt="">
-                        <h4>phillip Massey</h4>
-                    </div>
-                    <div>
-                        <img src="star_1.png" alt="">
-                        <img src="star_2.png" alt="">
-                        <img src="star_3.png" alt="">
-                        <img src="star_4.png" alt="">
-                        <img src="star_5.png" alt="">
-                        <p>8 min</p>
-                    </div>
+                <img src="./images/Bitmap (1).png" alt="">
+                <h3>Diagonal Smile</h3>
+                <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                <div>
+                    <img src="./images/1 (3).png" alt="">
+                    <h4>Phillip Massey</h4>
                 </div>
-                <div class="tuto_2">
-                    <img src="sad_smile.png" alt="">
-                    <h3>sad smile</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam deserunt suscipit optio deleniti commodi, atque reprehenderit harum. Cumque illum fuga, pariatur ad doloribus odit consequatur nulla consequuntur cupiditate iste placeat.</p>
-                    <div>
-                        <img src="pro1.png" alt="">
-                        <h4>phillip Massey</h4>
-                    </div>
-                    <div>
-                        <img src="star_1.png" alt="">
-                        <img src="star_2.png" alt="">
-                        <img src="star_3.png" alt="">
-                        <img src="star_4.png" alt="">
-                        <img src="star_5.png" alt="">
-                        <p>8 min</p>
-                    </div>
+                <div>
+                    <div><i class="fa-solid fa-star"></i></div>
+                    <div><i class="fa-solid fa-star"></i></div>
+                    <div><i class="fa-solid fa-star"></i></div>
+                    <div><i class="fa-solid fa-star"></i></div>
+                    <div><i class="fa-solid fa-star"></i></div>
                 </div>
-                <div class="tuto_3">
-                    <img src="Natural_smile.png" alt="">
-                    <h3>Natural Smile</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium pariatur, vitae illo eum velit quisquam quasi non quibusdam saepe, sapiente voluptatem voluptatibus amet autem quidem perferendis est dignissimos sint deserunt!</p>
-                    <div>
-                        <img src="pro1.png" alt="">
-                        <h4>phillip Massey</h4>
-                    </div>
-                    <div>
-                        <img src="star_1.png" alt="">
-                        <img src="star_2.png" alt="">
-                        <img src="star_3.png" alt="">
-                        <img src="star_4.png" alt="">
-                        <img src="star_5.png" alt="">
-                        <p>8 min</p>
-                    </div>
+                <p>8 min</p>
+            </div>
+            <div>
+                <img src="./images/Bitmap (4).png" alt="">
+                <h3>Happy Smile</h3>
+                <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                <div>
+                    <img src="./images/1 (3).png" alt="">
+                    <h4>Phillip Massey</h4>
                 </div>
-                <div class="tuto_4">
-                    <img src="Happy_smile.png" alt="">
-                    <h3>Happy Smile</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis est quod accusamus possimus minima fugiat provident ab maiores nemo ullam quaerat itaque ipsam corrupti consequuntur, error, tenetur eos dolorum fuga.</p>
-                    <div>
-                        <img src="pro1.png" alt="">
-                        <h4>phillip Massey</h4>
-                    </div>
-                    <div>
-                        <img src="star_1.png" alt="">
-                        <img src="star_2.png" alt="">
-                        <img src="star_3.png" alt="">
-                        <img src="star_4.png" alt="">
-                        <img src="star_5.png" alt="">
-                        <p>8 min</p>
-                    </div>
+                <div>
+                    <div><i class="fa-solid fa-star"></i></div>
+                    <div><i class="fa-solid fa-star"></i></div>
+                    <div><i class="fa-solid fa-star"></i></div>
+                    <div><i class="fa-solid fa-star"></i></div>
+                    <div><i class="fa-solid fa-star"></i></div>
                 </div>
+                <p>8 min</p>
+            </div>
+            <div>
+                <img src="./images/Bitmap (3).png" alt="">
+                <h3>Natural Smile</h3>
+                <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                <div>
+                    <img src="./images/1 (3).png" alt="">
+                    <h4>Phillip Massey</h4>
+                </div>
+                <div>
+                    <div><i class="fa-solid fa-star"></i></div>
+                    <div><i class="fa-solid fa-star"></i></div>
+                    <div><i class="fa-solid fa-star"></i></div>
+                    <div><i class="fa-solid fa-star"></i></div>
+                    <div><i class="fa-solid fa-star"></i></div>
+                </div>
+                <p>8 min</p>
+            </div>
+            <div>
+                <img src="./images/Bitmap (2).png" alt="">
+                <h3>Sad Smile</h3>
+                <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                <div>
+                    <img src="./images/1 (3).png" alt="">
+                    <h4>Phillip Massey</h4>
+                </div>
+                <div>
+                    <div><i class="fa-solid fa-star"></i></div>
+                    <div><i class="fa-solid fa-star"></i></div>
+                    <div><i class="fa-solid fa-star"></i></div>
+                    <div><i class="fa-solid fa-star"></i></div>
+                    <div><i class="fa-solid fa-star"></i></div>
+                </div>
+                <p>8 min</p>
             </div>
         </section>
-        <section class="membership">
+        <section>
+            <h2>Free membership</h2>
             <div>
-                <h3>Free membership</h3>
+                <img src="./images/smile.svg" alt="">
+                <h3>Lorem Ipsum</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
             <div>
-                <div>
-                    <img src="" alt="logo">
-                    <h3>Lorem ipsum</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus ut voluptas accusantium vero necessitatibus nemo ducimus omnis beatae quibusdam voluptatum? Odit hic maiores nesciunt perspiciatis veritatis provident voluptate facilis dolore!</p>
-                </div>
-                <div>
-                    <img src="" alt="logo">
-                    <h3>Lorem ipsum</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus ut voluptas accusantium vero necessitatibus nemo ducimus omnis beatae quibusdam voluptatum? Odit hic maiores nesciunt perspiciatis veritatis provident voluptate facilis dolore!</p>
-                </div>
-                <div>
-                    <img src="" alt="logo">
-                    <h3>Lorem ipsum</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus ut voluptas accusantium vero necessitatibus nemo ducimus omnis beatae quibusdam voluptatum? Odit hic maiores nesciunt perspiciatis veritatis provident voluptate facilis dolore!</p>
-                </div>
-                <div>
-                    <img src="" alt="logo">
-                    <h3>Lorem ipsum</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis natus molestias quos a eligendi ex quisquam distinctio, voluptatum enim deleniti sapiente est consectetur aut porro? Possimus tempore architecto aliquid repellat!</p>
-                </div>
+                <img src="./images/smile.svg" alt="">
+                <h3>Lorem Ipsum</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
-            <button>register for free</button>
+            <div>
+                <img src="./images/smile.svg" alt="">
+                <h3>Lorem Ipsum</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+            <div>
+                <img src="./images/smile.svg" alt="">
+                <h3>Lorem Ipsum</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+            <button>REGISTER FOR FREE</button>
         </section>
-        <section class="FQA">
+        <section>
+            <h2>F.A.Q</h2>
             <div>
-                <h2>F.A.Q</h2>
+                <div>
+                    <div>
+                        <h3>How does this work?</h3>
+                    </div>
+                    <div>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </div>
+
+                    <div>
+                        <h3>How does this work?</h3>
+                    </div>
+                    <div>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </div>
+                </div>
+                <div>
+                    <div>
+                        <h3>How does this work?</h3>
+                    </div>
+                    <div>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </div>
+                    <div>
+                        <h3>How does this work?</h3>
+                    </div>
+                    <div>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </div>
+                </div>
             </div>
-            <div>
-                <div>
-                    <h3><strong>How does this work?</strong></h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto vero saepe, laboriosam illum ducimus nostrum ex voluptatibus, maxime ut doloribus facilis, animi quos est maiores quam quod nemo praesentium optio?</p>
-                </div>
-                <div>
-                    <h3><strong>How does this work?</strong></h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto vero saepe, laboriosam illum ducimus nostrum ex voluptatibus, maxime ut doloribus facilis, animi quos est maiores quam quod nemo praesentium optio?</p>
-                </div>
-                <div>
-                    <h3><strong>How does this work?</strong></h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto vero saepe, laboriosam illum ducimus nostrum ex voluptatibus, maxime ut doloribus facilis, animi quos est maiores quam quod nemo praesentium optio?</p>
-                </div>
-                <div>
-                    <h3><strong>How does this work?</strong></h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto vero saepe, laboriosam illum ducimus nostrum ex voluptatibus, maxime ut doloribus facilis, animi quos est maiores quam quod nemo praesentium optio?</p>
-                </div>
         </section>
     </main>
     <footer>
-        <div>
-            <a href=""><img src="" alt="logo"> SmileSchool</a>
-            <div class="social media">
-                <a href=""><img src="" alt="facebook"></a>
-                <a href=""><img src="" alt="twitter"></a>
-                <a href=""><img src="" alt="instagram"></a>
+        <section>
+            <div>
+                <img src="https://fakeimg.pl/250x250?text=Sample+Logo" alt="logo">
+                <div>
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                </div>
             </div>
-        </div>
-        <p>SmileSchool ©smileschool 2020</p>
+            <p>©smileschool 2020</p>
+        </section>
     </footer>
 </body>
-</html>
+</html> -->
