--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -29,7 +29,7 @@
                     <span>GRIN</span>
                     <span>LAUGH</span>
                 </div>
-                <button> REGISTER FOR FREE</button>
+                <button>REGISTER FOR FREE</button>
             </div>
             <div class="lfp">
                 <h2><span>Learn</span> from the pros</h2>
@@ -57,17 +57,17 @@
                 </div>
             </div>
         </section>
-        <!-- <section>
-            <div>
-                <img src="./images/Bitmap.png" alt="image">
+        <section class="quote-h">
+            <div class="quoter">
+                <img src="quote.png" alt="quote">
             </div>
-            <div>
+            <div class="quote">
                 <blockquote>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</blockquote>
-                <h3>NAME</h3>
+                <h3>Person Name</h3>
                 <P>weather presenter</P>
             </div>
         </section>
-        <section>
+        <!-- <section>
             <h2>Most popular tutorials</h2>
             <div>
                 <img src="./images/Bitmap (1).png" alt="">
@@ -211,4 +211,4 @@
         </section>
     </footer>
 </body>
-</html> -->
+</html> --> 
