--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -151,31 +151,38 @@
             </div>
            
         </section>
-        <!-- <section>
-            <h2>Free membership</h2>
+        <section class="membership">
             <div>
-                <img src="./images/smile.svg" alt="">
-                <h3>Lorem Ipsum</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <h2><span>Free</span> membership</h2>
             </div>
-            <div>
-                <img src="./images/smile.svg" alt="">
-                <h3>Lorem Ipsum</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <div class="box-container">
+                <div class=" box box1">
+                    <img src="logo2.png" alt="logo2">
+                    <h3>Lorem Ipsum</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+                <div class=" box box2">
+                    <img src="logo2.png" alt="logo2">
+                    <h3>Lorem Ipsum</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+                <div class="box box3">
+                    <img src="logo2.png" alt="logo2">
+                    <h3>Lorem Ipsum</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+                <div class="box box4">
+                    <img src="logo2.png" alt="logo2">
+                    <h3>Lorem Ipsum</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
             </div>
-            <div>
-                <img src="./images/smile.svg" alt="">
-                <h3>Lorem Ipsum</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <div class="button2">
+                 <button>REGISTER FOR FREE</button>
             </div>
-            <div>
-                <img src="./images/smile.svg" alt="">
-                <h3>Lorem Ipsum</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-            <button>REGISTER FOR FREE</button>
+           
         </section>
-        <section>
+        <!-- <section>
             <h2>F.A.Q</h2>
             <div>
                 <div>
