--- a/headphones/2-index.html
+++ b/headphones/2-index.html
@@ -7,6 +7,61 @@
     <link rel="stylesheet" href="2-styles.css">
 </head>
 <body>
+    <section class="landing_page" id="landing_page">
+         <header>
+             <div class="logo">
+                <img src="logo_headphones.png" alt="">
+             </div>
+             <div class="humburger">
+                     &#9776;
+             </div>
+                <div class="links">
+                    <a href="#what_to_do" class="mobile_hidden">what we do</a>
+                     <a href="#our_result" class="mobile_hidden">our result</a>
+                      <a href="#contact_us" class="mobile_hidden">contact us</a>
+                </div>
+        </header>
+        <div class="hero_text">
+            <h2>Lorem ipsum dolor, sit amet consectetur adipisicing</h2>
+            <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h3>
+        </div>
+
+        <button>CALL TO ACTION</button>
+          
+        <div class="description">'
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi facilis nemo qui nam minima eum quam velit esse. Voluptate sint, exercitationem harum tempore iusto aspernatur aliquid labore explicabo hic facere?</p>
+           </div>
+    </section>
+    <section class="what" id="what_to_do">
+        <div class="title">
+            <h2>What we do ...</h2>
+        </div>
+        <div class="description2">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero cum laborum cumque, necessitatibus maxime repellendus eius eum officia, at dolor aut beatae iure saepe! Voluptas quod laudantium praesentium labore aperiam.Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero cum laborum cumque, necessitatibus maxime repellendus eius eum officia, at dolor aut beatae iure saepe! Voluptas quod laudantium praesentium labore aperiam.</p>
+        </div>
+        <div class="card-h">
+            <div class=" card card1">
+                <img src="sound_wave.jpg" alt="">
+                <h4>Lorem ipsum</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+            </div>
+            <div class="card card2">
+                <img src="clapperboard.jpg" alt="">
+                <h4>Lorem ipsum</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>   
+            <div class="card card3">
+                <img src="music_note.jpg" alt="">
+                <h4>Lorem ipsum</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>     
+            <div class="card card4">
+                <img src="ear_listening.jpg" alt="">
+                <h4>Lorem ipsum</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>   
+        </div>
+    </section>
     <section class="our_results" id="our_result">
         <div class="title2">
             <h2>our results speak for themselves</h2>
